--- a/src/components/home/Featured.astro
+++ b/src/components/home/Featured.astro
@@ -34,10 +34,10 @@ if (featured) {
         alt={featured.slug} 
         class="w-full aspect-video md:h-full object-cover" 
       />
-      <div class="absolute inset-0 bg-gradient-to-t from-bg-primary/70 via-bg-primary/40 to-transparent p-6 flex flex-col justify-end">
-        <h2 class="text-2xl md:text-3xl font-bold group-hover:text-blue-400 transition">
+      <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent p-2 md:p-6 flex flex-col justify-end items-start">
+        <p class="text-xl text-white md:text-3xl font-bold">
           {featured.title}
-        </h2>
+        </p>
       </div>
     </a>
 
