--- a/src/pages/draft/[id]/index.astro
+++ b/src/pages/draft/[id]/index.astro
@@ -151,7 +151,7 @@ import autoSave from "@/lib/blogs/autosave";
       const val = await autoSave(article?.id || '', { status: 'pending' });
       console.log(val);
       if (val === true) {
-        window.location.reload(); 
+        // window.location.reload(); 
       } else {
         window.showToast('Something went wrong', 3000, 'error');
       }
