--- a/src/components/home/Featured.astro
+++ b/src/components/home/Featured.astro
@@ -37,7 +37,7 @@ if (featured) {
         class="w-full aspect-video md:h-full object-cover" 
       />
       <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent p-2 md:p-6 flex flex-col justify-end items-start">
-        <p class="text-xl text-white md:text-3xl font-bold">
+        <p class="text-xl text-start text-white font-bold">
           {featured.title}
         </p>
       </div>
